--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"pnpx tailwindcss -i src/styles/global.css -o src/styles/main.css --watch\" ",
     "build": "vite build"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
